# 2024-internship-task-example

./: .gitignore  Cargo.toml  LICENSE.md  README.md
proto/: build.rs  msg.proto
proto/src/: cmd_id.rs  lib.rs
server/: Cargo.toml  build.rs  server.json
server/src/: main.rs  util.rs
server/src/config/: mod.rs  server_config.rs
server/src/net/: gateway.rs  mod.rs  packet.rs  session.rs
server/src/net/handler/: handler_func.rs  mod.rs
server/src/services/: mod.rs  reverse_proxy.rs  web.rs  websocket.rs
web/: .gitignore  index.html  package.json  vite.config.ts
web/src/: App.vue  main.ts  router.ts  style.css  utils.ts  websocket.ts
web/src/components/: WsControl.vue
web/src/store/: ws.ts
web/src/views/: ChartView.vue  HomeView.vue  ProgressView.vue
