[package]
name = "server"
edition = "2021"
version.workspace = true

[dependencies]
proto.workspace = true
prost.workspace = true

rand.workspace = true
lazy_static.workspace = true
byteorder.workspace = true
paste.workspace = true
chrono.workspace = true

env_logger.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
ansi_term.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

axum.workspace = true
axum-server.workspace = true
hyper.workspace = true
hyper-util.workspace = true
mime_guess.workspace = true
